# ZK-PRU

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
circuits/: README.md
circuits/circom/: zk_pru.circom
circuits/noir/: Nargo.toml
docs/: 01-overview.md  02-architecture.md  03-identity-model.md  04-pru-generation.md  05-registry.md  06-zk-proofs.md  07-authorization.md  08-protocol-integration.md  09-security-model.md  10-faq.md  CHANGES.md
programs/zk-pru-registry/: Anchor.toml  Cargo.toml  update-program-id-zk-pru.mjs
programs/zk-pru-registry/programs/zk-pru-registry/: Cargo.toml
programs/zk-pru-registry/programs/zk-pru-registry/src/: constants.rs  errors.rs  lib.rs
programs/zk-pru-registry/programs/zk-pru-registry/src/instructions/: create_owner_vault.rs  initialize_registry.rs  mod.rs  register_capability_commitment.rs  revoke_capability_commitment.rs  update_encrypted_seed_blob.rs  update_pru_commitment_root.rs
programs/zk-pru-registry/programs/zk-pru-registry/src/state/: capability_record.rs  mod.rs  owner_vault.rs  registry_config.rs
registry/: memory.ts  onchain.ts
scripts/: check-no-secret-leak.sh
sdk/: README.md  delegated-capability.ts  encryption.ts  identity.ts  index.ts  mock-backend.ts  mock-wallet.ts  poseidon.ts  pru.ts  purpose.ts  stable-units.ts  types.ts  verify.ts
tests/: architecture.test.ts  e2e.test.ts  identity.test.ts  pru.test.ts  registry.test.ts
tests/attack-simulations/: README.md  crypto-utils.mjs  new-architecture-attacks.mjs  run-attacks.mjs
(+2 files in other folders)
